--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <title>Mon super site pour la NSI</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-		<div class="barre_nav">
-			<a href="index.html" class="active">Accueil</a>
-			<a href="pages/civils.html" class="bouton_nav">Les avions civils</a>
-			<a href="pages/militaires.html" class="bouton_nav">Les avions militaires</a>
-			<a href="pages/prototypes.html" class="bouton_nav">Les prototypes</a>
-		</div>
-</body>
+<html lang="fr">	
+	<head>
+  		<meta charset="utf-8">
+  		<title>Mon super site pour la NSI</title>
+  		<link rel="stylesheet" href="style.css">
+	</head>
+
+	<body>
+			<div class="barre_nav">
+
+				<a class="premier active" href="index.html">Accueil</a>
+				<a href="pages/civils.html">Les avions civils</a>
+				<a href="pages/prototypes.html">Les prototypes</a>
+				<a class="dernier" href="pages/militaires.html">Les avions militaires</a>
+
+			</div>
+
+
+			<div class="intro">
+				<h1>Mes avions préférés</h1>
+				<p>Bienvenue sur mon site web ou je vais vous parler de quelques de mes avions préférés organisés en 3 catégories :</p>
+
+			</div>
+
+
+			<div class="intro-links">
+			
+				<div class="image-intro"><a href="pages/civils.html"><img src="media/index_media/civil.jpg"><p>Les avions civils</p></a></div>
+				<div class="image-intro"><a href="pages/prototypes.html"><img src="media/index_media/prototype.jpg"><p>Les prototypes</p></a></div>
+				<div class="image-intro"><a href="pages/militaires.html"><img src="media/index_media/militaire.jpg"><p>Les avions militaires</p></a></div>
+				
+			</div>
+	</body>
 </html>
