--- a/pages/civils.html
+++ b/pages/civils.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 		<div class="barre_nav">
-			<a href="../index.html">Accueil</a>
+			<a class="premier" href="../index.html">Accueil</a>
 			<a href="civils.html" class="active">Les avions civils</a>
-			<a href="militaires.html">Les avions militaires</a>
 			<a href="prototypes.html">Les prototypes</a>
+			<a class="dernier" href="militaires.html">Les avions militaires</a>
+			
 		</div>
 
 </body>
