--- a/pages/militaires.html
+++ b/pages/militaires.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 		<div class="barre_nav">
-			<a href="../index.html">Accueil</a>
+			<a class="premier" href="../index.html">Accueil</a>
 			<a href="civils.html">Les avions civils</a>
-			<a href="militaires.html" class="active">Les avions militaires</a>
 			<a href="prototypes.html">Les prototypes</a>
+			<a href="militaires.html" class="dernier active">Les avions militaires</a>
+			
 		</div>
 </body>
 </html>
